[gd_scene load_steps=5 format=3 uid="uid://bvetq7ixe7r7f"]

[ext_resource type="Script" path="res://enemy.gd" id="1_e5mpq"]
[ext_resource type="PackedScene" uid="uid://smefu35yi3ph" path="res://weapon.tscn" id="2_p57u4"]
[ext_resource type="Texture2D" uid="uid://buiatnvn1ea3x" path="res://icon.svg" id="2_ysn0g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k4rwi"]
radius = 59.0
height = 118.0

[node name="Enemy" type="Area2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_e5mpq")
weaponType = ExtResource("2_p57u4")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ysn0g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_k4rwi")

[node name="invincibleDelay" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="prepareTime" type="Timer" parent="."]
one_shot = true

[node name="recoverTime" type="Timer" parent="."]
one_shot = true

[node name="maxRetreatTime" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="invincibleDelay" to="." method="_on_invincible_delay_timeout"]
[connection signal="timeout" from="prepareTime" to="." method="_on_prepare_time_timeout"]
[connection signal="timeout" from="recoverTime" to="." method="_on_recover_time_timeout"]
[connection signal="timeout" from="maxRetreatTime" to="." method="_on_max_retreat_time_timeout"]
